overflow-x fix

--- a/demos/millennials/style.css
+++ b/demos/millennials/style.css
@@ -10,7 +10,6 @@
 
 html, body {
     font-family: Avenir, sans-serif;
-    overflow-x: hidden;
 }
 
 .wrapper {
